# CatMOF

./: .gitattributes  .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  cli.py  config.example.yaml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
catalmof/: cli.py  cluster_extraction.py  featurization.py  get_stable_mofs.py  paths.py  predict_activation_stability.py  predict_thermal_stability.py  sbu_analysis.py  sbu_capping.py  screen_by_metal.py  text_mining.py
catalmof/data/: atomic_data.py
catalmof/data/CoRE_ASR_2024/: 41467_2015_BFncomms7350_MOESM943_ESM_1_ASR_pacman.cif  LALFUB_ASR_pacman.cif  OSIXIY_ASR_pacman.cif  ZUVCIF_ASR_pacman.cif
catalmof/tests/: test_catalmof.py
catalmof/text_mining_tools/: downloader.py  paper_pickler.py  title_fetcher.py
catalmof/text_mining_tools/adjusted_article_downloader/: articledownloader.py
catmof/: __init__.py  cli.py  featurization.py  get_stable_mofs.py  paths.py  predict_activation_stability.py  predict_thermal_stability.py  sbu_analysis.py  sbu_capping.py  screen_by_metal.py  text_mining.py
catmof/data/CoRE_ASR_2024/: ABAYOU_ASR_pacman.cif  IZEPAF_ASR_pacman.cif  OTAXOX_ASR_pacman.cif  UZAJIR_ASR_pacman.cif  XAFFAN_ASR_pacman.cif  c7ta02760e2_2_ASR_pacman.cif
catmof/sbu_quantum_ml/: README.md  __init__.py  tasks.py  train.py
catmof/sbu_quantum_ml/density_fitting/: __init__.py  __main__.py  assemble_features.py  molden_io.py  psi4_df.py  workflows.py  xtb_parse.py
catmof/sbu_quantum_ml/density_fitting/examples/: xtb_example.inp  xtb_example_jobscript  xtb_initial_example.xyz
catmof/sbu_quantum_ml/models/: __init__.py  bp_net.py
catmof/sbu_quantum_ml/training/: __init__.py  data.py  hyperopt.py  loop.py  metrics.py
catmof/tests/: test_catmof.py
catmof/text_mining_tools/: article.py  downloader.py  paper_pickler.py  title_fetcher.py
devtools/: README.md
devtools/conda-envs/: catalmof_env.yaml  catmof_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
