[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "catalmof"
description = "We are generating DFT-ready SBU clusters for stable MOFs with catalytic potential."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Husain Adamji", email = "hadamji@mit.edu" }
]
license = { text = "MIT" }
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
# Run-time dependencies; aligned with devtools/conda-envs/catalmof_env.yaml (>= minimum; == for pymatgen, molSimplify, beautifulsoup4, articledownloader).
dependencies = [
    "numpy>=1.22.3",
    "pandas>=2.0.3",
    "scipy>=1.8.1",
    "networkx>=2.8.8",
    "pyyaml>=6.0",
    "click>=8.1.7",
    "pymatgen==2020.10.20",
    "scikit-learn>=0.24.2",
    "tensorflow>=2.4.1",
    "keras>=2.4.1",
    "beautifulsoup4==4.9.3",
    "nltk>=3.9.1",
    "regex>=2024.9.11",
    "requests>=2.32.3",
    "molSimplify==1.7.5",
    "pybliometrics>=4.1",
    "autologging>=1.3.2",
    "articledownloader==9.1.1",
]

# Update the urls once the hosting is set up.
#[project.urls]
#"Source" = "https://github.com/<username>/catalmof/"
#"Documentation" = "https://catalmof.readthedocs.io/"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
]
text_mining_titles = [
  "selenium>=4.22.0",
  "webdriver-manager>=4.0.1",
]  # Conda env includes these; use this extra for pip-only installs that need the title fetcher.

# CLI entry points
[project.scripts]
catalmof = "catalmof.cli:cli"

[tool.setuptools]
# This subkey is a beta stage development and keys may change in the future, see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html for more details
#
# As of version 0.971, mypy does not support type checking of installed zipped
# packages (because it does not actually import the Python packages).
# We declare the package not-zip-safe so that our type hints are also available
# when checking client code that uses our (installed) package.
# Ref:
# https://mypy.readthedocs.io/en/stable/installed_packages.html?highlight=zip#using-installed-packages-with-mypy-pep-561
zip-safe = false
# Let setuptools discover the package in the current directory,
# but be explicit about non-Python files.
# See also:
#   https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
# Note that behavior is currently evolving with respect to how to interpret the
# "data" and "tests" subdirectories. As of setuptools 63, both are automatically
# included if namespaces is true (default), even if the package is named explicitly
# (instead of using 'find'). With 'find', the 'tests' subpackage is discovered
# recursively because of its __init__.py file, but the data subdirectory is excluded
# with include-package-data = false and namespaces = false.
include-package-data = false
[tool.setuptools.packages.find]
namespaces = false
where = ["."]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
catalmof = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "catalmof/_version.py"
